--- a/coding-oj-backend/.gitignore
+++ b/coding-oj-backend/.gitignore
@@ -1,4 +1,3 @@
-
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -143,3 +142,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+### Environment files ###
+.env
+*.env
+!.env.example
