--- a/coding-oj-backend/pom.xml
+++ b/coding-oj-backend/pom.xml
@@ -137,6 +137,17 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
+        <!-- Actuator: 提供应用监控端点 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- Prometheus: 将指标数据转换为 Prometheus 格式 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
         <!-- Apache Commons Compress for tar archive -->
         <dependency>
             <groupId>org.apache.commons</groupId>
